--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,11 @@
+--prefer-binary
 flask==2.3.3
 chromadb==0.4.18
 openai==1.3.0
 PyMuPDF==1.23.7
 pandas==2.0.3
+numpy==1.24.3
+pydantic==1.10.9
 python-docx==0.8.11
 python-pptx==0.6.21
 Pillow==10.0.1
@@ -11,3 +14,5 @@ reportlab==4.0.4
 matplotlib==3.7.3
 gunicorn==21.2.0
 python-dotenv
+setuptools==68.0.0
+wheel==0.41.2
