--- a/.github/workflows/main_app-rag.yml
+++ b/.github/workflows/main_app-rag.yml
@@ -1,3 +1,4 @@
+cat > .github/workflows/main_app-rag.yml << EOL
 name: Build and deploy Python app to Azure Web App - app-rag
 on:
   push:
@@ -16,30 +17,24 @@ jobs:
       uses: actions/setup-python@v5
       with:
         python-version: '3.10'
-    # Install system dependencies (critical for PyMuPDF, pytesseract, etc.)
-    - name: Install system packages
-      run: |
-        sudo apt-get update
-        sudo apt-get install -y \
-          build-essential \
-          python3-dev \
-          tesseract-ocr \
-          libsm6 libxext6 libgl1
+    
     # Make startup.sh executable and verify it exists
     - name: Set permissions and verify files
       run: |
         chmod +x startup.sh
         ls -la
-        cat startup.sh
+    
     # Create ZIP including hidden files and maintain file permissions
     - name: Create deployment package
       run: |
         zip -r deploy.zip . -x "*.git*" "*.github*" "venv/*"
+    
     # Azure deployment
     - name: 'Deploy to Azure Web App'
       uses: azure/webapps-deploy@v3
       with:
         app-name: 'app-rag'
         slot-name: 'Production'
-        publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
+        publish-profile: \${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
         package: deploy.zip
+EOL
